--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -68,6 +68,22 @@
   -webkit-font-smoothing: antialiased;
 }
 
+@font-face {
+  font-family: 'Steelfish';
+  src: url("../fonts/Steelfish-Regular.ttf");
+  font-weight: normal;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+}
+
+@font-face {
+  font-family: 'SteelfishOutline';
+  src: url("../fonts/Steelfish-Outline.ttf");
+  font-weight: normal;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+}
+
 /* normalize.css 2012-02-07T12:37 UTC - https://github.com/necolas/normalize.css */
 /* =============================================================================
    HTML5 display definitions
@@ -848,4 +864,10 @@ section #title .credits.right {
   nav {
     display: none;
   }
+}
+
+.greenNumber {
+  font-family: 'SteelfishRegular' !important;
+  font-size: xx-large;
+  color: #00af00
 }
