--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -69,7 +69,7 @@
 }
 
 @font-face {
-  font-family: 'Steelfish';
+  font-family: 'SteelfishRegular';
   src: url("../fonts/Steelfish-Regular.ttf");
   font-weight: normal;
   font-style: normal;
