--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -868,6 +868,6 @@ section #title .credits.right {
 
 .greenNumber {
   font-family: 'SteelfishRegular' !important;
-  font-size: xx-large;
+  font-size: 40px;
   color: #00af00
 }
