--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -864,7 +864,7 @@ section #title .credits.right {
 .Number {
   font-family: 'SteelfishRegular' !important;
   font-size: 28px;
-  color: #ffffff
+  color: #e8e8e8
 }
 
 .greenNumber {
