--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -740,13 +740,13 @@ dt {
 }
 #header nav li a {
   color: white;
-  border: 1px solid #5d910b;
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #93bd20), color-stop(100%, #659e10));
-  background: -webkit-linear-gradient(#93bd20, #659e10);
-  background: -moz-linear-gradient(#93bd20, #659e10);
-  background: -o-linear-gradient(#93bd20, #659e10);
-  background: -ms-linear-gradient(#93bd20, #659e10);
-  background: linear-gradient(#93bd20, #659e10);
+  border: 1px solid #3cb0fd;
+  background-color: #3cb0fd;
+  background: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background: linear-gradient(to bottom, #3cb0fd, #3498db);
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   -o-border-radius: 2px;
@@ -766,14 +766,13 @@ dt {
   text-align: center;
 }
 #header nav li a:hover {
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #749619), color-stop(100%, #527f0e));
-  background: -webkit-linear-gradient(#749619, #527f0e);
-  background: -moz-linear-gradient(#749619, #527f0e);
-  background: -o-linear-gradient(#749619, #527f0e);
-  background: -ms-linear-gradient(#749619, #527f0e);
-  background: linear-gradient(#749619, #527f0e);
-  background-color: #659e10;
-  border: 1px solid #527f0e;
+  border: 1px solid #3cb0fd;
+  background-color: #3cb0fd;
+  background: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+  background: -moz-linear-gradient(top, #3cb0fd, #3498db);
+  background: -ms-linear-gradient(top, #3cb0fd, #3498db);
+  background: -o-linear-gradient(top, #3cb0fd, #3498db);
+  background: linear-gradient(to bottom, #3cb0fd, #3498db);
   -moz-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
   -webkit-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
   -o-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
