--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -739,25 +739,26 @@ dt {
   font-size: 14px;
 }
 #header nav li a {
-  color: white;
-  border: 1px solid #3cb0fd;
-  background-color: #3cb0fd;
-  background: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background: -o-linear-gradient(top, #3cb0fd, #3498db);
-  background: linear-gradient(to bottom, #3cb0fd, #3498db);
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  -o-border-radius: 2px;
-  -ms-border-radius: 2px;
-  -khtml-border-radius: 2px;
-  border-radius: 2px;
+  background-color: #3093c7; background-image: -webkit-gradient(linear, left top, left bottom, from(#3093c7), to(#1c5a85));
+  background: -webkit-linear-gradient(top, #3093c7, #1c5a85);
+  background: -moz-linear-gradient(top, #3093c7, #1c5a85);
+  background: -ms-linear-gradient(top, #3093c7, #1c5a85);
+  background: -o-linear-gradient(top, #3093c7, #1c5a85);
+  background: linear-gradient(to bottom, #3093c7, #1c5a85);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#3093c7,endColorstr=#1c5a85);
+  
+  border: 1px solid #3093c7;
+  -moz-border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -o-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -khtml-border-radius: 20px;
+  border-radius: 20px;
+  
   -moz-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3), 0px 3px 7px rgba(0, 0, 0, 0.7);
   -webkit-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3), 0px 3px 7px rgba(0, 0, 0, 0.7);
   -o-box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3), 0px 3px 7px rgba(0, 0, 0, 0.7);
   box-shadow: inset 0px 1px 0px rgba(255, 255, 255, 0.3), 0px 3px 7px rgba(0, 0, 0, 0.7);
-  background-color: #93bd20;
+  
   padding: 10px 12px;
   margin-top: 6px;
   line-height: 14px;
@@ -766,12 +767,13 @@ dt {
   text-align: center;
 }
 #header nav li a:hover {
-  border: 1px solid #3cb0fd;
-  background-color: #3cb0fd;
-  background: -webkit-linear-gradient(top, #3cb0fd, #3498db);
-  background: -moz-linear-gradient(top, #3cb0fd, #3498db);
-  background: -ms-linear-gradient(top, #3cb0fd, #3498db);
-  background: -o-linear-gradient(top, #3cb0fd, #3498db);
+  border: 1px solid #26759e;
+  background-color: #26759e; background-image: -webkit-gradient(linear, left top, left bottom, from(#26759e), to(#133d5b));
+  background: -webkit-linear-gradient(top, #26759e, #133d5b);
+  background: -moz-linear-gradient(top, #26759e, #133d5b);
+  background: -ms-linear-gradient(top, #26759e, #133d5b);
+  background: -o-linear-gradient(top, #26759e, #133d5b);
+  background: linear-gradient(to bottom, #26759e, #133d5b);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#26759e, endColorstr=#133d5b);
   background: linear-gradient(to bottom, #3cb0fd, #3498db);
   -moz-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
   -webkit-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
