--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -740,14 +740,14 @@ dt {
 }
 #header nav li a {
   color: white;
-  border: 1px solid 72021c;
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #a90329), color-stop(100%, #6d0019));
-  background: -webkit-linear-gradient(#a90329, #6d0019);
-  background: -moz-linear-gradient(#a90329, #6d0019);
-  background: -o-linear-gradient(#a90329, #6d0019);
-  background: -ms-linear-gradient(#a90329, #6d0019);
-  background: linear-gradient(#a90329, #6d0019);
-  background-color: #a90329;
+  border: 1px solid #780032;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #960032), color-stop(100%, #780032));
+  background: -webkit-linear-gradient(#960032, #780032);
+  background: -moz-linear-gradient(#960032, #780032);
+  background: -o-linear-gradient(#960032, #780032);
+  background: -ms-linear-gradient(#960032, #780032);
+  background: linear-gradient(#960032, #780032);
+  background-color: #960032;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   -o-border-radius: 2px;
@@ -766,19 +766,20 @@ dt {
   text-align: center;
 }
 #header nav li a:hover {
-  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #77021d), color-stop(100%, #3a000d));
-  background: -webkit-linear-gradient(#77021d, #3a000d);
-  background: -moz-linear-gradient(#77021d, #3a000d);
-  background: -o-linear-gradient(#77021d, #3a000d);
-  background: -ms-linear-gradient(#77021d, #3a000d);
-  background: linear-gradient(#77021d, #3a000d);
-  background-color: #77021d;
-  border: 1px solid #450111;
+  background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #c80046), color-stop(100%, #aa0047));
+  background: -webkit-linear-gradient(#c80046, #aa0047);
+  background: -moz-linear-gradient(#c80046, #aa0047);
+  background: -o-linear-gradient(#c80046, #aa0047);
+  background: -ms-linear-gradient(#c80046, #aa0047);
+  background: linear-gradient(#c80046, #aa0047);
+  background-color: #c80046;
+  border: 1px solid #aa0047;
   -moz-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
   -webkit-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
   -o-box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
   box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.2), 0px 1px 0px rgba(0, 0, 0, 0);
 }
+
 #header nav li.fork {
   float: left;
   margin-left: 0px;
